Add hook target type

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -2,4 +2,5 @@
   name: short go code line lengths 
   description: shortens the line length of go code to 90 characters.
   entry: go-line-length
+  types: [go]
   language: golang
