--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,6 +1,6 @@
-- id: go-line-length
+- id: shorten-go-lines
   name: short go code line lengths 
   description: shortens the line length of go code to 90 characters.
-  entry: go-line-length
+  entry: shorten-go-lines
   types: [go]
   language: golang
